--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5433/online_test_db
-spring.datasource.username=your_databasename
-spring.datasource.password=your_database_password
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5433/online_test_db}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 # JPA/Hibernate Properties
 spring.jpa.hibernate.ddl-auto=create
@@ -9,7 +9,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # Server Configuration
-server.port=8080
+server.port=your_port-number
 
 # Hibernate Configuration
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
