Add frontend implementation with auto-save functionality

--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,36 @@
-gitignore
-HELP.md
+# Backend
 target/
 !.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+*.class
+*.log
+*.jar
+*.war
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
+# Frontend
+frontend/node_modules/
+frontend/.pnp
+frontend/.pnp.js
+frontend/coverage/
+frontend/build/
+frontend/.DS_Store
+frontend/.env.local
+frontend/.env.development.local
+frontend/.env.test.local
+frontend/.env.production.local
+frontend/npm-debug.log*
+frontend/yarn-debug.log*
+frontend/yarn-error.log*
 
-### IntelliJ IDEA ###
-.idea
+# IDE
+.idea/
 *.iws
 *.iml
 *.ipr
-
-### VS Code ###
 .vscode/
+.settings/
+.classpath
+.project
 
-### Application ###
+# Environment
+.env
 application-local.properties
-
-### Logs ###
-*.log
-
-### Maven ###
-.mvn/
-mvnw
-mvnw.cmd
